--- a/View/Public/Styles/corn-puter.scss
+++ b/View/Public/Styles/corn-puter.scss
@@ -251,10 +251,11 @@ body{
 
     .featured-builds-image{
         grid-column: 2;
-        width: auto;
-        height: auto;
+        max-width: 500px;
+        max-height: 500px;
         float: right;
         text-align: center;
+        padding-left: 150px;
     }
     
     .featured-builds-btn{
@@ -266,6 +267,213 @@ body{
         font-weight: lighter;
         border: none;
     }
+
+    @media only screen and (max-width: 1070px){
+        .featured-builds-image{
+        display: none;
+        }
+        .featured-builds-info{
+            grid-column: 1 / 3;
+            padding: 50px 0px 50px 50px;
+            text-align: center;
+        }
+      }
+
+      @media only screen and (max-width: 830px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            padding: 6px 6px 6px 6px;
+            border-top: none;
+            border-bottom: solid gray 1px;
+            margin: 10px; 
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 40px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 12px;
+        }
+
+      }
+
+      @media only screen and (max-width: 810px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 60px 30px 0px;
+            text-align: center;
+        }
+      }
+
+      @media only screen and (max-width: 730px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 90px 30px 0px;
+            text-align: center;
+        }
+
+      }
+
+      @media only screen and (max-width: 730px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 100px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 80px;
+        }
+      }
+
+      @media only screen and (max-width: 670px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 130px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 110px;
+        }
+      }
+
+      @media only screen and (max-width: 610px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 230px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 210px;
+        }
+      }
+
+      @media only screen and (max-width: 500px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 340px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 320px;
+        }
+      }
+
+      @media only screen and (max-width: 430px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 430px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 420px;
+        }
+        .featured-welcome h2{
+            font-size: 25px;
+        }
+      }
+
+      @media only screen and (max-width: 370px){
+        .featured-builds-card{
+            display: grid;  
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }   
+        .featured-builds-info{
+            grid-column: 1;
+            padding: 10px 490px 30px 0px;
+            text-align: center;
+        }
+        .featured-builds-info h2{
+            font-size: 20px;
+        }
+        .featured-builds-info p{
+            font-size: 0px;
+        }
+        .featured-welcome{
+            padding-right: 480px;
+        }
+        .featured-welcome h2{
+            font-size: 25px;
+        }
+        .featured-welcome p{
+            font-size: 12px;
+        }
+
+      }
+
+
+    
 
 /* featured-builds */
 
