--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -31,6 +31,32 @@ body {
   z-index: 9999;
 }
 
+.navbar-title {
+  -ms-grid-column: 3;
+  grid-column: 3;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  text-align: center;
+  color: #ffffff;
+  font-weight: lighter;
+  font-size: 30px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-top: 5x;
+}
+
+.navbar-corn {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  height: 40px;
+  width: 40px;
+  float: right;
+  margin: auto;
+  margin-left: 85%;
+}
+
 .btn-nav-system-builder {
   -ms-grid-column: 2;
   grid-column: 2;
@@ -120,6 +146,81 @@ body {
 
 .search-button-1:hover {
   background-position: right center;
+}
+
+@media only screen and (max-width: 1460px) {
+  .navbar-title span {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .navbar-grid {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+    background-color: #2a2a2e;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    z-index: 9999;
+  }
+  .navbar-corn {
+    display: none;
+  }
+  .navbar-title {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    display: block;
+  }
+  .search-container {
+    display: none;
+  }
+  .search-button {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .navbar-title {
+    padding-right: 5px;
+  }
+  .btn-nav-home {
+    margin-left: 5%;
+  }
+  .btn-nav-featured-builds {
+    margin-left: 5%;
+  }
+  .btn-nav-system-builder {
+    margin-left: 5%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .navbar-title {
+    padding-right: 15vw;
+    font-size: 20px;
+  }
+  .btn-nav-system-builder {
+    padding: 5px 0px 5px 0px;
+    margin-left: 0%;
+    font-size: 12px;
+  }
+  .btn-nav-featured-builds {
+    padding: 5px 0px 5px 0px;
+    margin-left: 0%;
+    font-size: 12px;
+  }
+  .btn-nav-home {
+    padding: 5px 0px 5px 0px;
+    margin-left: 10%;
+    font-size: 12px;
+  }
 }
 
 /* navbar */
@@ -241,6 +342,19 @@ body {
   margin-right: 50px;
   margin-left: 50px;
   background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 1070px) {
+  .featured-builds-image {
+    display: none;
+  }
+  .featured-builds-info {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    padding: 50px 0px 50px 50px;
+    text-align: center;
+  }
 }
 
 /* home */
