--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -274,8 +274,8 @@ body {
   display: grid;
   -ms-grid-columns: 38% 1fr;
       grid-template-columns: 38% 1fr;
-  -ms-grid-rows: 500px;
-      grid-template-rows: 500px;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
   margin-top: 70px;
   margin-bottom: 70px;
 }
@@ -285,20 +285,18 @@ body {
   grid-column: 1;
   -ms-grid-row: 1;
   grid-row: 1;
-  display: -ms-grid;
-  display: grid;
   font-weight: lighter;
   color: #ffffff;
   text-align: center;
+  position: relative;
+  top: 130px;
 }
 
 .home-featured-desc {
   -ms-grid-column: 1;
   grid-column: 1;
-  -ms-grid-row: 2;
-  grid-row: 2;
-  display: -ms-grid;
-  display: grid;
+  -ms-grid-row: 1;
+  grid-row: 1;
   font-weight: lighter;
   color: #ffffff;
   text-align: center;
@@ -307,6 +305,8 @@ body {
   padding: 7px 45px 7px 45px;
   font-weight: lighter;
   border: none;
+  position: relative;
+  bottom: 40px;
 }
 
 .btn-home-featured {
@@ -324,6 +324,9 @@ body {
   padding: 7px 45px 7px 45px;
   font-weight: lighter;
   border: none;
+  background: #2b86de;
+  position: relative;
+  bottom: 250px;
 }
 
 .home-featured-img {
@@ -334,9 +337,7 @@ body {
   grid-row: 1, 2;
   display: -ms-grid;
   display: grid;
-  background-image: url("../Images/PCBuild.jpg");
-  background-size: 750px;
-  width: auto;
+  width: 750px;
   height: auto;
   border: none;
   margin-right: 50px;
@@ -344,16 +345,57 @@ body {
   background-repeat: no-repeat;
 }
 
-@media only screen and (max-width: 1070px) {
-  .featured-builds-image {
+@media only screen and (max-width: 1400px) {
+  .home-featured-img {
+    width: 500px;
+  }
+  .home-featured-header {
+    top: 90px;
+  }
+  .home-featured-desc {
+    bottom: 0px;
+  }
+  .btn-home-featured {
+    bottom: 120px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .home-featured-img {
+    width: 300px;
+  }
+  .home-featured-header {
+    top: 20px;
+  }
+  .home-featured-desc {
+    bottom: 0px;
+  }
+  .btn-home-featured {
+    bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .home-featured-grid {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  .home-featured-img {
     display: none;
   }
-  .featured-builds-info {
+  .home-featured-header {
+    display: none;
+  }
+  .home-featured-desc {
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    padding: 50px 0px 50px 50px;
-    text-align: center;
+    grid-column: 1;
+  }
+  .btn-home-featured {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    bottom: 10px;
   }
 }
 
