--- a/View/Public/Styles/corn-puter.scss
+++ b/View/Public/Styles/corn-puter.scss
@@ -239,7 +239,7 @@ body{
         grid-row: 3;
         display: grid;
         grid-template-columns: 38% 1fr;
-        grid-template-rows: 500px;
+        grid-template-rows: auto;
         margin-top: 70px;
         margin-bottom: 70px;
     }
@@ -247,16 +247,16 @@ body{
     .home-featured-header{
         grid-column: 1;
         grid-row: 1;
-        display: grid;
         font-weight: lighter;
         color: #ffffff;
         text-align: center;
+        position: relative;
+        top: 130px;
     }  
 
     .home-featured-desc{
         grid-column: 1;
-        grid-row: 2;
-        display: grid;
+        grid-row: 1;
         font-weight: lighter;
         color: #ffffff;
         text-align: center;
@@ -265,6 +265,8 @@ body{
         padding: 7px 45px 7px 45px;
         font-weight: lighter;
         border: none;
+        position: relative;
+        bottom: 40px;
     }
 
     .btn-home-featured{
@@ -279,15 +281,16 @@ body{
         padding: 7px 45px 7px 45px;
         font-weight: lighter;
         border: none;
+        background: #2b86de;
+        position: relative;
+        bottom: 250px;
     }
 
     .home-featured-img{
         grid-column: 2;
         grid-row: 1, 2;
         display: grid;
-        background-image: url('../Images/PCBuild.jpg');
-        background-size: 750px;
-        width: auto;
+        width: 750px;
         height: auto;
         border: none;
         margin-right: 50px;
@@ -295,16 +298,56 @@ body{
         background-repeat: no-repeat;
     }
 
-    @media only screen and (max-width: 1070px){
-        .featured-builds-image{
-        display: none;
+    @media only screen and (max-width: 1400px){
+        .home-featured-img{
+        width: 500px
         }
-        .featured-builds-info{
-            grid-column: 1 / 3;
-            padding: 50px 0px 50px 50px;
-            text-align: center;
+        .home-featured-header{
+            top: 90px;
+        }
+        .home-featured-desc{
+            bottom: 0px;
+        }
+        .btn-home-featured{
+            bottom: 120px;
         }
       }
+
+      @media only screen and (max-width: 1000px){
+        .home-featured-img{
+            width: 300px
+        }
+        .home-featured-header{
+            top: 20px;
+        }
+        .home-featured-desc{
+            bottom: 0px;
+        }
+        .btn-home-featured{
+            bottom: 20px;
+        }
+      }
+
+      @media only screen and (max-width: 680px){
+        .home-featured-grid{
+            grid-template-columns: auto;
+        }
+        .home-featured-img{
+           display: none;
+        }
+        .home-featured-header{
+            display: none;
+        }
+        .home-featured-desc{
+            grid-column: 1;
+        }
+        .btn-home-featured{
+            grid-column: 1;
+            grid-row: 2;
+            bottom: 10px;
+        }
+      }
+
 
 /* home */
 
