--- a/View/Public/Styles/corn-puter.css
+++ b/View/Public/Styles/corn-puter.css
@@ -400,6 +400,24 @@ body {
 }
 
 /* home */
+/* system builder */
+.system-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-columns: 100vh;
+      grid-template-columns: 100vh;
+}
+
+.system-header {
+  text-align: center;
+  color: #ffffff;
+}
+
+/* system builder */
 /* featured-builds */
 .featured-welcome-grid {
   -ms-grid-column: 1;
